[tool.poetry]
name = "playlistcleaner"
version = "0.1.0"
description = ""
authors = ["Fumiaki Taguchi <25476669+F-Tag@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
mutagen = "^1.46.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
